# powerkey

./: .gitignore  Cargo.toml
.zed/: tasks.json
src/: main.rs  utils.rs
src/custom_widget/: separator.rs
src/subscription/: global_event.rs  global_event_listener.rs  global_event_player.rs  grab.rs  mod.rs
src/subscription/global_event/: listener.rs  mod.rs  player.rs
src/window/main/: global_event_mapper.rs  grab_adapter.rs  mapper.rs  mod.rs
