[package]
name = "powerkey"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }
iced = { version = "0.13", features = ["smol", "advanced"] }
easy-ext = "1"
smol = "2"
itertools = "0"
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging"] }
windows-strings = "0.4"
