[package]
name = "powerkey"
version = "0.1.0"
edition = "2024"

[dependencies]
# rdev = { version = "0.5", features = ["unstable_grab"] }
rdev = { git = "https://github.com/Narsil/rdev.git", rev = "c77b4e5456301cfa7f2226020f2a58f2f8d77c5d", features = [
    "unstable_grab",
    "serialize",
] }
iced = { version = "0.13", features = ["smol", "advanced"] }
easy-ext = "1"
smol = "2"
itertools = "0"
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging"] }
windows-strings = "0.4"
log = "0"
pretty_env_logger = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
